# GOOSE

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile.am  README.md  a.out  autogen.sh  codegen.py  configure.ac
kernel/: CMakeLists.txt  kernel.c  linker.ld
kernel/arch/: gdt.c  idt.c  isrs.s  isrs.s.json  memmgt.c  syscall.c  syscalls.c
kernel/boot/: boot.s  multiboot.s
kernel/display/: framebuffer.c  psf_font.c
kernel/driver/: klog_driver.c
kernel/fs/: filetable.c
kernel/include/: filetable.h
kernel/include/arch/: page.h
kernel/include/driver/: klog_driver.h
kernel/include/elf/: elf.h
kernel/include/fs/: filetable.h
kernel/include/mod/: kmod.h
kernel/io/: ioutils.c  keyboard.c  serial.c
libc/: CMakeLists.txt  crt0.s  crti.s  crtn.s  stdio.c  stdlib.c  string.c  stringops.s  unistdio.c
libc/arch/: memmgt.c
libc/include/: filedriver.h  math.h  stdio.h  stdlib.h  string.h  time.h  unistd.h
libc/include/arch/: cpu.h  gdt.h  idt.h  isrs.h  isrs.h.json  memmgt.h  syscall.h  syscalls.h
libc/include/boot/: multiboot2.h
libc/include/display/: framebuffer.h  psf_font.h
libc/include/io/: ioutils.h  keyboard.h  keyboard_layouts.h  serial.h  timer.h
libc/include/sys/: syscall.h  types.h
libc/sys/: syscall.c  syscall.s
modules/test_module/: CMakeLists.txt  test_module.c
src/: framebuffer.c  gdt.c  idt.c  kernel.c  math.c  string.c  vga.c
src/arch/: gdt.c  idt.c  isrs.s  memmgt.c  multiboot.s
src/boot/: boot.s  isrs.s  multiboot.s
src/display/: framebuffer.c  psf_font.c
src/include/: framebuffer.h  idt.h  math.h  multiboot2.h  string.h  vga.h
src/include/arch/: gdt.h  idt.h  isrs.h  memmgt.h
src/include/boot/: multiboot2.h
src/include/display/: framebuffer.h  psf_font.h
src/include/io/: ioutils.h  keyboard.h  keyboard_layouts.h  serial.h  timer.h
src/io/: ioutils.c  keyboard.c  serial.c  timer.c
sysroot/usr/include/sys/: types.h
toolchain/: binutils.patch  build-toolchain.sh  gcc.patch
tools/: create_iso.sh  grub.cfg  run_goose.sh  run_qemu.sh
